Update to latest Babel and stuff.

--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 This is pure boilerplate: index.js takes care of getting the actual content via
 Webpack and injecting it into the document.
 -->
-<script src="/pages/aharvey/php-crystal-ball/pres.js"></script>
+<script src="/PRES-NAME/pres.js"></script>
