--- a/content.html
+++ b/content.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title></title>
+		<title>What the dep?</title>
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -16,7 +16,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section id="title">
-					<h1></h1>
+					<h1>What the dep</h1>
+					<h2>is going on with Go dependency management?</h2>
 					<h3>Adam Harvey</h3>
 					<aside class="notes">
 					</aside>
