--- a/content.html
+++ b/content.html
@@ -326,6 +326,63 @@ go: downloading gopkg.in/bsm/ratelimit.v1 v1.0.0-20160220154919-db14e161995a
 							required on the fly.
 						</aside>
 					</section>
+
+					<section id="upgrading-dependencies">
+						<pre><code class="php" data-trim>
+$ go get -u gopkg.in/redis.v4@v4.2.4
+go: finding gopkg.in/redis.v4 v4.2.4
+go: downloading gopkg.in/redis.v4 v4.2.4
+$ git diff
+diff --git a/examples/003-upgrading-dependencies/demo.sh b/examples/003-upgrading-dependencies/demo.sh
+index 9b470ac..722a07c 100755
+--- a/examples/003-upgrading-dependencies/demo.sh
++++ b/examples/003-upgrading-dependencies/demo.sh
+@@ -3,4 +3,4 @@
+ set -e
+ set -x
+ 
+-go get -u gopkg.in/redis.v4 v4.2.4
++go get -u gopkg.in/redis.v4@v4.2.4
+diff --git a/examples/003-upgrading-dependencies/go.mod b/examples/003-upgrading-dependencies/go.mod
+index c038f14..8cbb522 100644
+--- a/examples/003-upgrading-dependencies/go.mod
++++ b/examples/003-upgrading-dependencies/go.mod
+@@ -7,5 +7,5 @@ require (
+        golang.org/x/sys v0.0.0-20161023150541-c200b10b5d5e
+        gopkg.in/bsm/ratelimit.v1 v1.0.0-20160220154919-db14e161995a
+        gopkg.in/bugst/go-serial.v1 v1.0.0-20161022203751-04302f262ca3
+-       gopkg.in/redis.v4 v4.2.3
++       gopkg.in/redis.v4 v4.2.4
+ )
+diff --git a/examples/003-upgrading-dependencies/go.sum b/examples/003-upgrading-dependencies/go.sum
+index 43af25d..5f12c0c 100644
+--- a/examples/003-upgrading-dependencies/go.sum
++++ b/examples/003-upgrading-dependencies/go.sum
+@@ -11,3 +11,5 @@ gopkg.in/bugst/go-serial.v1 v1.0.0-20161022203751-04302f262ca3 h1:zx7d/z1ieptf1A
+ gopkg.in/bugst/go-serial.v1 v1.0.0-20161022203751-04302f262ca3/go.mod h1:jNKggPePtSsutLgoV9/5mdw6F5Cc/+IPc9iv6aLxGoc=
+ gopkg.in/redis.v4 v4.2.3 h1:0s27sbgN3FDHgaBtOme2JBab/AormYY7wQpFR1z8JMw=
+ gopkg.in/redis.v4 v4.2.3/go.mod h1:8KREHdypkCEojGKQcjMqAODMICIVwZAONWq8RowTITA=
++gopkg.in/redis.v4 v4.2.4 h1:y3XbwQAiHwgNLUng56mgWYK39vsPqo8sT84XTEcxjr0=
++gopkg.in/redis.v4 v4.2.4/go.mod h1:8KREHdypkCEojGKQcjMqAODMICIVwZAONWq8RowTITA=
+						</code></pre>
+						<aside class="notes">
+							Because of the integration with the existing <code>go</code>
+							tool, upgrading dependencies is done through the venerable
+							<code>go get</code> command. You can provide an explicit version
+							by appending @VERSION-NUMBER after the module URL.
+						</aside>
+					</section>
+
+					<section id="releasing-a-project">
+						<div class="todo">content</div>
+						<aside class="notes">
+							Finally, I was going to demo releasing a project, but it's
+							actually pretty uninteresting, which I guess is the point. Tag
+							your project with <code>vX.Y.Z</code>, push that to
+							GitHub/GitLab/whatever, and you're done. No central registry to
+							update.
+						</aside>
+					</section>
 				</section>
 
 				<section id="thanks">
