Update title slide.

--- a/content.html
+++ b/content.html
@@ -19,6 +19,8 @@
 					<h1>What the dep</h1>
 					<h2>is going on with Go dependency management?</h2>
 					<h3>Adam Harvey</h3>
+					<h3>@LGnome</h3>
+					<h3>New Relic</h3>
 					<aside class="notes">
 					</aside>
 				</section>
