Use the LCA title slide.

--- a/content.html
+++ b/content.html
@@ -15,12 +15,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section id="title">
-					<h1>What the dep</h1>
-					<h2>is going on with Go dependency management?</h2>
-					<h3>Adam Harvey</h3>
-					<h3>@LGnome</h3>
-					<h3>New Relic</h3>
+				<section id="title" data-background="images/title.png">
 					<aside class="notes">
 					</aside>
 				</section>
